-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Querying
-
Fully Compatible
-
ALL
-
Query 2020-09-21
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Missing break in switch
Execution falls through to the next case statement or default; this might indicate a common typo. Missing break statement between cases in switch statement
/src/mongo/db/query/query_planner.cpp:176: MISSING_BREAK 116257 The case for value "mongo::QueryPlannerParams::ASSERT_MIN_TS_HAS_NOT_FALLEN_OFF_OPLOG" is not terminated by a 'break' statement.
/src/mongo/db/query/query_planner.cpp:178: MISSING_BREAK 116257 The above case falls through to this one.