SERVER-50764 Fix bad merge conflict - add break;